update admin settings, allow for tracking by timetable instead of hour count, remove legacy stuff.
